assets/scss/sections/_announcements.scss
.announcements-grid {
  position: relative;
  margin: 30px 0;
  &.loading-content {
    opacity: 0.4;
    pointer-events: none;
  }
  &_banner {
    height: 100%;
    background-color: $white;
    border-radius: 4px;
    transition: box-shadow 0.2s ease-out;
    cursor: pointer;
    position: relative;
    &:hover {
      box-shadow: $shadow-light-6;
    }
    .banner-bg {
      @include abs-zero;
      background-size: cover;
      background-position: center;
      border-radius: 4px;
    }
  }
  &_item {
    display: flex;
    flex-direction: column;
    flex-wrap: wrap;
    // height: 100%;
    position: relative;
    background-color: $white;
    border-radius: 4px;
    transition: box-shadow 0.2s ease-out;
    cursor: pointer;
    &:hover {
      box-shadow: $shadow-light-6;
    }
    &:first-child {
      min-height: 100%;
    }
    .has-tooltip {
      z-index: 1;
    }
    .item-bg {
      position: relative;
      width: 100%;
      height: 0;
      padding-bottom: 76.78%;
      background-position: center;
      background-size: cover;
      border-radius: 4px 4px 0 0;
      background-color: $greyish-blue-3;
    }
    .item-details {
      display: flex;
      flex-direction: column;
      width: 100%;
      flex: 1;
      padding: 12px 15px 15px 15px;
      &__price {
        font: 600 18px Gilroy;
        color: $dark-blue-2;
      }
      &__title {
        padding-bottom: 5px;
        font: 500 15px Gilroy;
        margin-bottom: 0;
      }
      &__year {
        width: 100%;
        font: 400 14px Gilroy;
        color: $dark-blue-5;
        overflow: hidden;
        text-overflow: ellipsis;
        display: -webkit-box;
        -webkit-line-clamp: 2;
        line-clamp: 2;
        -webkit-box-orient: vertical;
      }
      &__options {
        display: flex;
        i:not(:last-child) {
          margin-right: 16px;
        }
      }
      &__actions {
        display: flex;
        justify-content: flex-end;
        width: 100%;
      }
      &__checks {
        width: 100%;
        display: flex;
        justify-content: flex-end;
      }
      &--infos {
        display: flex;
        justify-content: space-between;
        width: 100%;
      }
      .item-info {
        display: block;
        color: $greyish-blue-7;
      }
    }
    .call-count {
      display: inline-flex;
      align-items: center;
      color: $greyish-blue-7;
      i {
        margin-right: 4px;
        font-size: 12px;
        &.icon-cursor,
        &.icon-eye {
          margin-left: 8px;
          font-size: 15px;
        }
      }
    }
    .item-price {
      display: flex;
      align-items: center;
      width: 100%;
      margin-bottom: 4px;
      span {
        color: $dark-blue-2;
        font-size: 15px;
        font-weight: 500;
        margin-right: auto;
      }
      i {
        margin-left: 15px;
      }
    }
    .item-checkbox {
      width: 100%;
      position: relative;
      z-index: 1;
      .checkbox-input {
        label {
          flex-direction: row-reverse;
          .checkbox {
            margin-right: -16px;
          }
        }
      }
    }
    .item-overlay {
      @include abs-zero;
      z-index: 1;
      pointer-events: none;
      display: flex;
      flex-direction: column;
      justify-content: space-between;
      padding: 12px;
      &__top {
        width: 100%;
        display: flex;
        justify-content: space-between;
        &--left {
          // width: 30%;
        }
        &--right {
          // width: 70%;
          display: flex;
          justify-content: flex-end;
        }
        .badge{
          white-space: nowrap;
        }
      }
      &__bottom {
        display: flex;
        justify-content: space-between;
        &--right {
          display: flex;
          &:not(:last-child) {
            margin-right: 10px;
          }
        }
      }
      .btn-sq {
        pointer-events: all;
        &:not(:last-child) {
          margin-right: 12px;
        }
      }
      .badge {
        display: flex;
        align-items: center;
        justify-content: center;
        color: $white;
        font-weight: 500;
        height: 25px;
        min-width: 62px;
        border-radius: 4px;
        background-color: rgba($dark-blue-1, 0.35);
        padding: 2px 8px 0;
        i {
          font-size: 12px;
        }
        &:not(:last-child) {
          margin-right: 12px;
        }
        &.squared {
          min-width: 25px;
          padding: 0;
        }
        &.from-border {
          margin-left: -12px;
          border-radius: 0 4px 4px 0;
          min-width: 74px;
          background-color: $dark-blue-2;
        }
        &.active {
          background-color: $green-1;
        }
        &.pending {
          background-color: $dark-blue-2;
        }
        &.inactive {
          background-color: $yellow-2;
        }
        &.rejected {
          background-color: $red-1;
        }
      }
      .badge-blue {
        background: $dark-blue-2;
      }
    }
    a.abs-link {
      z-index: 1;
    }
  }
  &_gallery {
    position: relative;
    &:hover + .announcements-grid_item {
      box-shadow: $shadow-light-6;
    }
    .d-flex > div {
      width: 100%;
      &:first-child {
        width: 57.73%;
        padding-right: 2.46%;
        div {
          margin-bottom: 10px;
        }
      }
      &:last-child {
        width: 42.27%;
        div {
          margin-bottom: 5.82%;
        }
      }
    }
    .item-bg {
      background-position: center;
      background-size: cover;
      padding-bottom: 76.78%;
      border-radius: 4px;
      cursor: pointer;
      background-color: $white;
      transition: box-shadow 0.2s ease-out;
      &.wider {
        padding-bottom: 47.5%;
      }
    }
  }
}

.grid-title {
  display: flex;
  align-items: center;
  justify-content: space-between;
  border-radius: 4px;
  background-color: $dark-blue-1;
  color: $white;
  height: 50px;
  padding: 0 25px;
  margin: 0 0 20px;
  h2 {
    display: flex;
    align-items: center;
    margin: 0;
    i {
      font-size: 16px;
      margin-left: 5px;
      margin-right: 12px;
    }
    span {
      font-size: 18px;
      font-weight: 500;
    }
  }
  a {
    display: inline-flex;
    vertical-align: top;
    align-items: center;
    color: $white;
    font-size: 15px;
    font-weight: 500;
    &:hover {
      color: $yellow-1;
    }
    i {
      margin-left: 10px;
    }
  }
}

.no-results {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  text-align: center;
  margin: 100px 0 70px;
  span {
    font-size: 18px;
    font-weight: 500;
    margin-top: 22px;
    max-width: 300px;
  }
}

.collapse-toggle {
  position: absolute;
  bottom: 0;
  left: 50%;
  transform: translate(-50%, 50%);
  .btn {
    color: $red-1;
    border: 3px solid;
    border-radius: 100px;
    padding-left: 25px;
    padding-right: 25px;
    background-color: $white;
    border-color: $greyish-blue-1;
    i {
      margin: 0;
    }
  }
}

.controls-panel {
  padding: 8px 25px 9px;
  .control-icon {
    display: inline-flex;
    align-items: center;
    padding: 4px 8px;
    font-size: 17px;
    margin-left: 8px;
    span {
      font-size: 14px;
      font-weight: 500;
      margin-left: 8px;
      margin-top: 1px;
    }
    &:last-of-type {
      margin-right: 5px;
      padding-right: 0;
      & ~ .tooltip {
        left: 4px !important;
      }
    }
  }
}

.dark-mode {
  .controls-panel {
    .control-icon {
      background-color: $dark-2;
    }
  }
}

@include media-max-width('lg') {
  .controls-panel {
    padding: 0 25px 17px;
  }
}

.dark-mode {
  .grid-title {
    background-color: $dark-2;
  }
  .announcements-grid {
    &_gallery {
      .item-bg {
        background-color: $dark-3;
      }
      &:hover + .announcements-grid_item {
        box-shadow: $shadow-dark-6;
      }
    }
    &_banner {
      background-color: $dark-2;
      &:hover {
        box-shadow: $shadow-dark-6;
      }
    }
    &_item {
      background-color: $dark-2;
      &:hover {
        box-shadow: $shadow-dark-6;
      }
      .item-bg {
        background-color: $dark-3;
      }
      .item-details .item-info,
      .call-count {
        color: $grey-4;
      }
      .item-price span {
        color: $white;
      }
      .item-overlay .badge {
        background-color: rgba($dark-2, 0.35);
      }
    }
  }

  .no-results {
    span {
      color: $grey-5;
    }
  }

  .collapse-toggle {
    .btn {
      color: $white;
      background-color: $dark-2;
      border-color: $dark-1;
    }
  }
}

@include media-max-width('lg') {
  .announcements-grid {
    margin: 20px -10px;
    &_item {
      .item-details {
        padding: 7px 10px 10px;
        // h3 {
        //   font-size: 13px;
        // }
      }
      .item-info {
        font-size: 12px;
      }
      .item-price {
        span {
          font-size: 14px;
        }
        i {
          font-size: 10px;
        }
      }
      .item-overlay {
        padding: 10px;
        .btn-sq {
          &:not(:last-child) {
            margin-right: 10px;
          }
        }
        .badge {
          min-width: 60px;
          font-size: 12px;
          padding: 0 5px;
          i {
            font-size: 10px;
          }
          &:not(:last-child) {
            margin-right: 10px;
          }
          &.from-border {
            margin-left: -10px;
            min-width: 70px;
          }
        }
      }
    }
  }

  .grid-title {
    height: 34px;
    padding: 0 15px;
    margin-bottom: 15px;
    h2 {
      span {
        font-size: 14px;
      }
      i {
        font-size: 14px;
        margin-left: 0;
      }
    }
    a {
      font-size: 13px;
      font-weight: normal;
    }
  }

  .no-results {
    margin: 70px 0 40px;
    span {
      font-size: 16px;
    }
    img {
      width: 50px;
    }
  }

  .announcements-sorting {
    margin: 0 -10px;
  }
}

@include media-max-width('lg') {
  .announcements-grid {
    .col-b {
      position: relative;
      &::after {
        content: '';
        position: absolute;
        z-index: -1;
        top: 0;
        left: 50%;
        transform: translate(-50%);
        height: 100%;
        width: 50vw;
        min-width: 1250px;
        background-color: $greyish-blue-10;
      }
    }
  }

  .dark-mode {
    .announcements-grid {
      .col-b::after {
        background-color: $dark-5;
      }
    }
  }
}

@include media-min-width('lg') {
  .announcements-grid {
    .col-lg-auto {
      width: 20%;
    }
    .col-lg-mid {
      position: relative;
      &::after {
        content: '';
        position: absolute;
        z-index: -1;
        top: 0;
        left: 50%;
        transform: translate(-50%);
        height: 100%;
        width: 100vw;
        min-width: 1250px;
        background-color: $greyish-blue-10;
      }
    }
  }

  .dark-mode {
    .announcements-grid {
      .col-lg-mid::after {
        background-color: $dark-5;
      }
    }
  }

  .breadcrumbs + .announcements-grid {
    margin-top: 0;
  }

  .announcements-sorting {
    .col-lg-auto:first-child {
      width: 80%;
    }
    .col-lg-auto:last-child {
      width: 20%;
    }
  }
}

